fix dark mode icon

--- a/todo-app/src/sass/base.scss
+++ b/todo-app/src/sass/base.scss
@@ -54,12 +54,12 @@
     border-color: hsl(0, 0%, 86%);
     border-radius: 0  0 4px 4px;
     span{
-      font-size: .8em;
+      font-size: .7em;
     }
   }
   .drag{
     p{
-      font-size: .8em;
+      font-size: .7em;
     }
   }
   *{
